objects/BLN_Template_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Events__c</fullName>
        <label>BLN Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipLabel>BLN Template Mapping</relationshipLabel>
        <relationshipName>BLN_Template_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_Item__c</fullName>
        <label>BLN Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipLabel>BLN Template Mapping</relationshipLabel>
        <relationshipName>BLN_Template_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_Template__c</fullName>
        <label>BLN_Template</label>
        <referenceTo>BLN_Template__c</referenceTo>
        <relationshipLabel>BLN Template Mapping</relationshipLabel>
        <relationshipName>BLN_Template_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Field_Name__c</fullName>
        <label>DB Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Html_Field_Name__c</fullName>
        <label>Html Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BLN Template Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>BLN Template Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Template Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>